@@ -1,6 +1,7 @@
 package com.jcohy.convention.asciidoctor;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -36,6 +37,7 @@ public class AsciidoctorTest {
                 .withDebug(true)
                 .forwardOutput()
                 .withArguments("clean", "asciidoctor","asciidoctorPdf")
+//                .withArguments("clean","asciidoctorPdf")
                 .build();
         assertThat(result.task(":asciidoctor").getOutcome()).isEqualTo(TaskOutcome.SUCCESS);
         File generatedHtml = new File(projectDir, "build/docs/asciidoc");
@@ -43,15 +45,29 @@ public class AsciidoctorTest {
         assertThat(new File(generatedHtml, "css/site.css")).exists();
         assertThat(new File(generatedHtml, "js/site.js")).exists();
         assertThat(htmlFile).exists();
-        assertThat(Files.readString(htmlFile.toPath()))
+        assertThat(new String(Files.readAllBytes(htmlFile.toPath()), StandardCharsets.UTF_8))
                 .contains("<title>Flight 文档</title>")
                 .contains("<p>doc-url: <a href=\"http://docs.jcohy.com\">doc-url</a></p>")
                 .contains("<p>resource-url: <a href=\"http://resources.jcohy.com\">resource-url</a></p>")
                 .contains("<p>software-url: <a href=\"http://software.jcohy.com\">software-url</a></p>")
                 .contains("<p>study-url: <a href=\"http://study.jcohy.com\">study-url</a></p>")
                 .contains("<p>project-url: <a href=\"http://project.jcohy.com\">project-url</a></p>");
+
         File generatedPdf = new File(projectDir, "build/docs/asciidocPdf");
         File pdfFile = new File(generatedPdf, "index.pdf");
         assertThat(pdfFile).exists();
+
+        File GroovyExample = new File(projectDir, "build/docs/src/asciidoctor/main/groovy/com/jcohy/gradle/GroovyExample.groovy");
+        File JavaExample = new File(projectDir, "build/docs/src/asciidoctor/main/java/com/jcohy/gradle/JavaExample.java");
+        File KotlinExample = new File(projectDir, "build/docs/src/asciidoctor/main/kotlin/com/jcohy/gradle/KotlinExample.kts");
+        File GroovyTestExample = new File(projectDir, "build/docs/src/asciidoctor/test/groovy/com/jcohy/gradle/GroovyTestExample.groovy");
+        File JavaTestExample = new File(projectDir, "build/docs/src/asciidoctor/test/java/com/jcohy/gradle/JavaTestExample.java");
+        File KotlinTestExample = new File(projectDir, "build/docs/src/asciidoctor/test/kotlin/com/jcohy/gradle/KotlinTestExample.kts");
+        assertThat(GroovyExample).exists();
+        assertThat(JavaExample).exists();
+        assertThat(KotlinExample).exists();
+        assertThat(GroovyTestExample).exists();
+        assertThat(JavaTestExample).exists();
+        assertThat(KotlinTestExample).exists();
     }
 }
